# PEFT_benchmark

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  modal_eval_run.py  modal_train.py  pyproject.toml  requirements.txt  template.py
config/trainer/: default_trainer.yaml
dataset/: download.py
datasets/: download.py
docs/: experiment_design.md  qwen2-5_1-5_finetuned_README.md
notebooks/: analysis.ipynb  visualizations.ipynb
scripts/: benchmark.py  config.py  dataset_utils.py  evaluate.py  inference.py  test.py  test_gpu.py  trainer.py
scripts/config_file/: accelerate_cfg.yaml  config.json  ds_config.json
